# shallowLearn

./: .gitignore  README.md  requirements.txt  train-model.py
dataset/: dataset.py  load_sqlite.py  parse_lichess_sf.py  parse_util.py  test.py
shallowred_interface/: Cargo.toml  pyproject.toml
shallowred_interface/src/: lib.rs
sr_interface/: Cargo.toml  pyproject.toml
sr_interface/src/: lib.rs
